feat: add swagger new route login
add response and schema to the route login
