# swagger-output.json
@@ -31,11 +31,27 @@
   "paths": {
     "/login/": {
       "post": {
-        "description": "",
-        "parameters": [],
+        "tags": [
+          "Login"
+        ],
+        "description": "Rota responsavel por autenticar o usuário, verificando os dados de email e senha.",
+        "parameters": [
+          {
+            "name": "user",
+            "in": "body",
+            "description": "Deve ser fornecido um e-mail e senha válidos para realização da autenticação, os dados são verificados no banco de dados para verificar sua validade.",
+            "schema": {
+              "$ref": "#/definitions/UserLogin"
+            },
+            "required": true
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
           }
         }
       }
@@ -254,6 +270,46 @@
           "200": {
             "description": "OK"
           }
+        }
+      }
+    }
+  },
+  "definitions": {
+    "UserLogin": {
+      "type": "object",
+      "properties": {
+        "email": {
+          "type": "string",
+          "example": "lewishamilton@gmail.com"
+        },
+        "password": {
+          "type": "string",
+          "example": "123456"
+        }
+      }
+    },
+    "User": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "number",
+          "example": 1
+        },
+        "displayName": {
+          "type": "string",
+          "example": "Lewis Hamilton"
+        },
+        "email": {
+          "type": "string",
+          "example": "lewishamilton@gmail.com"
+        },
+        "password": {
+          "type": "string",
+          "example": "123456"
+        },
+        "image": {
+          "type": "string",
+          "example": "https://upload.wikimedia.org/wikipedia/commons/1/18/Lewis_Hamilton_2016_Malaysia_2.jpg"
         }
       }
     }
